dark mode fix

--- a/7608.css
+++ b/7608.css
@@ -2264,7 +2264,7 @@ hr[data-v-29eab9d7] {
 }
 
 .jbg[data-v-2ba6adc4] {
-    background: #fff;
+    background: #222;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 10px;
     font-weight: bold;
